add redis
